--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
+    <h1>Rock, paper, scissors</h1>
+    <h3 id="selection"></h3>
+    <div class="buttons">
+      <button type="button">Rock</button>
+      <button type="button">Paper</button>
+      <button type="button">Scissors</button>
+    </div>
+    <div class="result"></div>
     <script src="js/javascript.js"></script>
   </body>
 </html>
